--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,11 +11,13 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "flatted": "^3.2.7",
     "js-image-zoom": "^0.7.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.3.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.8",
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.2.2",
