--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "proxy": "http://localhost:5000",
   "scripts": {
     "test": "jest",
     "server-prod": "node server.js",
@@ -25,7 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "socket.io": "^4.5.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^4.1.1"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
