--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "proxy": "http://localhost:5000",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -32,6 +33,6 @@
     "nodemon": "^2.0.15"
   },
   "engines": {
-      "node": "17.x"
+    "node": "17.x"
   }
 }
