--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "googleapis": "^126.0.1",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "nodemailer": "^6.9.4",
     "socket.io": "^4.5.1",
     "uuid": "^8.3.2",
     "web3": "^4.1.1"
