--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "crypto-browserify": "^3.12.0",
     "ethers": "^6.7.1",
     "flatted": "^3.2.7",
+    "hcaptcha": "^0.1.1",
     "js-image-zoom": "^0.7.0",
     "nodemailer": "^6.9.4",
     "os-browserify": "^0.3.0",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^3.1.0",
+    "react-hcaptcha": "^0.1.1",
     "react-helmet-async": "^1.3.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.8",
